<!--========================================================================
@file strings.xml

@brief
Specifies variables for strings used within application

Copyright (c) 2017-2019 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
=========================================================================-->
<resources>
    <string name="app_name">Unified Sensor Test App</string>
    <string name="send_request">Send Request</string>
    <string name="stop_request">Stop Request</string>
    <string name="request">Request:</string>
    <string name="registry_read_request">Registry Read Request:</string>
    <string name="registry_write_request">Registry Write Request:</string>
    <string name="one_of">One Of:</string>
    <string name="version">Version:</string>
    <string name="read_group_name">Read Group Name:</string>
    <string name="write_main_group_name">Write Group Name:</string>
    <string name="registry_data">Registry Data:</string>
    <string name="write_group_name">Write Data Name:</string>
    <string name="suid_low">SUID Low:</string>
    <string name="suid_high">SUID High:</string>
    <string name="suspend_config">Suspend Config:</string>
    <string name="client_processor">Client Processor</string>
    <string name="wakeup_config">Wakeup Delivery</string>
    <string name="sensor_payload">Payload:</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="batch_spec">Batch Spec</string>
    <string name="batch_period">Batch Period (u-sec):</string>
    <string name="flush_period">Flush Period (u-sec):</string>
    <string name="payload">Payload:</string>
    <string name="flush_only">Flush Only:</string>
    <string name="max_batch">Max Batch:</string>
    <string name="sensor_event_payload">Sensor Event Payload :</string>
    <string name="registry_read_output_display">Registry Read output :</string>
    <string name="low_lat_flag">Flag :</string>
    <string name="channel_type">Use generic memory layout</string>
    <string name="low_lat_period_us"> DRM Rate :</string>
    <string name="pre_defined_scripts">Scripts :</string>
    <string name="is_passive">Is Passive:</string>
    <string name="samples_counted">Samples Counted:</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="expected_samples">Expected Samples:</string>
    <string name="messageID">Message ID:</string>
    <string name="time_stamp">Timestamp:</string>
    <string name="data">Data:</string>
    <string name="status">Status:</string>
    <string name="buttonShowJSON">Toggle JSON View</string>
    <string name="ConfigDat">Configuration Data:</string>
    <string name="water_mark">Water Mark:</string>
    <string name="float_resolution">Float Resolution:</string>
    <string name="float_range">Float Range:</string>
    <string name="standard_sensor_config">Standard Sensor Config:</string>
</resources>
