<?xml version="1.0" encoding="utf-8"?>
<!--========================================================================
@file fragment_sensor_request.xml

@brief
Specifies sensor fragment interface

Copyright (c) 2017-2020 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
=========================================================================-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clickable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:scrollbarFadeDuration="3000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="Sensor:"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sensor_list_spinner"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textSize="8sp"
                    android:spinnerMode="dropdown">
                </Spinner>
            </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="8dp"
	        android:layout_marginLeft="8dp"
	        android:orientation="horizontal">

	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.8"
	            android:text="On-Change:"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.8"
	            android:id="@+id/on_change_value"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.8"
	            android:text="HW_ID:"/>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.8"
	            android:id="@+id/hw_id_value"/>
	    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="Rigid-Body-Type:"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:id="@+id/rigid_body_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:text="@string/suid_low" />

                <TextView
                    android:id="@+id/suid_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:text="@string/suid_high"/>

                <TextView
                    android:id="@+id/suid_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/pre_defined_scripts"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/pre_defined_script_spinner"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:textAlignment="center"
                    android:layout_weight="0.2"
                    android:spinnerMode="dropdown">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="ReqMsgs:"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/req_msg_list_spinner"
                    android:layout_marginRight="32dp"
                    android:textAlignment="center"
                    android:layout_weight="0.5"
                    android:spinnerMode="dropdown">
                </Spinner>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/request"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/suspend_config"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/client_processor"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/client_processor_spinner"
                    android:layout_weight="0.5"
                    android:layout_marginRight="32dp"
                    android:textAlignment="center"
                    android:textSize="8sp"
                    android:spinnerMode="dropdown">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/wakeup_config"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wakeup_spinner"
                    android:layout_weight="0.5"
                    android:layout_marginRight="32dp"
                    android:textAlignment="center"
                    android:textSize="8sp"
                    android:spinnerMode="dropdown">
                </Spinner>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/batch_spec"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/batch_period"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:id="@+id/batch_period_input_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/flush_period"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:id="@+id/flush_period_input_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/flush_only"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:id="@+id/flush_only_checkbox"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/max_batch"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:id="@+id/max_batch_checkbox"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/is_passive"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:id="@+id/is_passive_checkbox"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sensor_payload_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sensor_event_payload_display_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>